--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,3 +1,53 @@
-<h1>Heroes app</h1>
+<mat-sidenav-container fullscreen>
+  <mat-sidenav #sidenav mode="push">
+    <mat-toolbar color="primary">
+      <span>Menu</span>
+      <span class="spacer"></span>
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar>
+    <mat-nav-list>
+      <mat-list-item
+        role="listitem"
+        routerLink="./listado"
+        (click)="sidenav.toggle()"
+      >
+        <mat-icon mat-list-icon fontIcon="format_list_bulleted"></mat-icon>
+        Listado heroes
+      </mat-list-item>
+      <mat-list-item
+        role="listitem"
+        routerLink="./buscar"
+        (click)="sidenav.toggle()"
+      >
+        <mat-icon mat-list-icon fontIcon="search"></mat-icon>
+        Buscar un heroe
+      </mat-list-item>
+      <mat-list-item
+        role="listitem"
+        routerLink="./agregar"
+        (click)="sidenav.toggle()"
+      >
+        <mat-icon mat-list-icon fontIcon="add"></mat-icon>
+        Agregar heroe
+      </mat-list-item>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-toolbar>
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span class="spacer"></span>
+    <button mat-button>Log-out</button>
+  </mat-toolbar>
+
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</mat-sidenav-container>
+
+<!-- <h1>Heroes app</h1>
 <hr />
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
