--- a/src/app/heroes/pages/listado/listado.component.html
+++ b/src/app/heroes/pages/listado/listado.component.html
@@ -1,1 +1,14 @@
-<p>listado works!</p>
+<h1>Listado heroes 😎</h1>
+
+<mat-divider></mat-divider>
+
+<div
+  fxLayout="row wrap"
+  fxLayout.xs="column"
+  fxLayoutAlign="center"
+  fxLayoutGap="20px"
+>
+  <div fxFlex="30" fxFlex.lg="15" fxFlex.sm="30" *ngFor="let heroe of heroes">
+    <app-heroe-tarjeta-component [heroe]="heroe"></app-heroe-tarjeta-component>
+  </div>
+</div>
