--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,1 +1,70 @@
-<p>agregar works!</p>
+<h1>Agregar nuevo heroe</h1>
+
+<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="40px">
+
+    <div fxFlex="50" fxLayout="column">
+
+        <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px" fxLayoutGap.xs="">
+            <mat-form-field fxFlex="100">
+                <mat-label>
+                    Super Heroe
+                </mat-label>
+                <input matInput type="text" [(ngModel)]="heroe.superhero" required />
+            </mat-form-field>
+
+            <mat-form-field fxFlex="100">
+                <mat-label>
+                    Alter ego
+                </mat-label>
+                <input matInput type="text" [(ngModel)]="heroe.alter_ego" required />
+            </mat-form-field>
+        </div>
+
+        <mat-form-field>
+            <mat-label>
+                Primera aparicion
+            </mat-label>
+            <input matInput type="text" [(ngModel)]="heroe.first_appearance" required />
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>
+                Personajes
+            </mat-label>
+            <input matInput [(ngModel)]="heroe.characters" type="text" required />
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>
+                Creador
+            </mat-label>
+            <mat-select [(ngModel)]="heroe.publisher">
+                <mat-option *ngFor="let publisher of publishers" [value]="publisher.id">
+                    {{publisher.id}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>
+                Foto URL
+            </mat-label>
+            <input matInput type="url" required [(ngModel)]="heroe.alt_img" />
+        </mat-form-field>
+
+        <br>
+
+        <pre>{{heroe | json}}</pre>
+
+        <button mat-raised-button color="primary" (click)="registrarHeroe()">
+            <mat-icon>save</mat-icon>
+            Guardar
+        </button>
+
+    </div>
+
+    <div fxFlex="50">
+        <img [src]="heroe | heroeImage">
+    </div>
+
+</div>
